# numbat-ui

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json
.github/workflows/: release.yml  test.yml
numbat-repl/: Cargo.toml
numbat-repl/src/: main.rs
scripts/: sync-version.js
src/: app.css  app.html  app.rs  autostart.rs  config.rs  engine.rs  format.rs  hotkey.rs  macos_ime.rs  main.rs  platform.rs  session.rs  theme.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  repl.rs
src-tauri/tests/: version_check.rs
src/components/: Terminal.svelte
src/icons/: icon.icns
src/routes/: +page.svelte
src/ui/: main_window.rs  mod.rs  quick_panel.rs  settings.rs
