[package]
name = "numbat-ui"
version = "2.0.0"
description = "A native GUI for the Numbat scientific calculator."
authors = ["Fabio Manz"]
edition = "2021"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
egui = "0.29"
env_logger = "0.11"
log = "0.4"
numbat = "1.23.0"
anyhow = "1"
colored = "2"
itertools = "0.14"
image = { version = "0.25.10", features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_Foundation"] }

[dev-dependencies]
serde_json = "1.0.149"
toml = "1.0.6"

[build-dependencies]
toml = "1.0.6"
