[package]
name = "numbat-ui"
version = "2.0.2"
description = "A native GUI for the Numbat scientific calculator."
authors = ["Fabio Manz"]
edition = "2021"

[dependencies]
eframe = { version = "0.34", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
egui = "0.34"
env_logger = "0.11"
log = "0.4"
numbat = "1.23.0"
anyhow = "1"
colored = "3"
itertools = "0.14"
image = { version = "0.25.10", features = ["png"] }
dirs = "5.0"
toml = "1.0.6"
muda = "0.17"


[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Console", "Win32_Foundation"] }

[dev-dependencies]
serde_json = "1.0.149"
toml = "1.0.6"

[build-dependencies]
toml = "1.0.6"

[package.metadata.bundle]
name = "Numbat"
identifier = "com.fabio.numbat-ui"
icon = ["src/icons/icon.icns"]
