[package]
name = "numbat-ui"
version = "1.0.1"
description = "A native GUI for the Numbat scientific calculator."
authors = ["Fabio Manz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "numbat_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
toml = "0.8"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
numbat = "1.17"
rustyline = { version = "14.0", features = ["derive"] }
anyhow = "1"
dirs = "5"
colored = "2"
itertools = "0.12"
toml = { version = "0.8", features = ["parse"] }
terminal_size = "0.3"
jiff = "0.1"


[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_Foundation"] }
